hard-gists/748cda36befe17fd1cb0/run.log
=== Docker Run Log for 748cda36befe17fd1cb0 ===
Started at: Mi 29. Okt 17:10:09 CET 2025

[2025-10-29 17:10:10] START: Running container for 748cda36befe17fd1cb0
[2025-10-29 17:10:10] SUCCESS: Container 4ba5fd148aec61baab86c560107d84ee64a6d4ca57bada058256fa4c890c50fe started for 748cda36befe17fd1cb0
=== Container logs for 748cda36befe17fd1cb0 ===
  File "/snippet.py", line 37
    print g
    ^^^^^^^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(...)?
=== End of logs for 748cda36befe17fd1cb0 ===
[2025-10-29 17:10:12] INFO: Container 4ba5fd148aec61baab86c560107d84ee64a6d4ca57bada058256fa4c890c50fe has stopped
